--- a/writing/ICLR_2018/lampinen_one_shot_words.tex
+++ b/writing/ICLR_2018/lampinen_one_shot_words.tex
@@ -106,13 +106,13 @@ Indeed, interleaving sentences without the word substantially reduced the interf
 
 
 \subsection{Where is the magic happening?}
-\begin{figure}
+\begin{figure}[t]
 \centering
 \includegraphics[width=\textwidth]{figures/skipping_by_word.png}
-\caption{Comparing optimizing the input embedding, output embedding, or both -- where is the magic happening?}
+\caption{Comparing change in perplexity on the new word test set when optimizing the input embedding, output embedding, or both on either 1 or 10 sentences containing the new word. Light lines are 10 independent runs, dark lines are averages.}
 \label{skipping_results}
 \end{figure}
-Because the model we are using has distinct input and output embeddings, we are able to evaluate their distinct contributions to learning about the new word. Specifically, we compared learning only the softmax weights and bias (output embedding), to learning only the input embedding, as well as to learning both, for one- and ten-shot learning\footnote{Note that these analyses were performed before we tried the negative sampling approach, but we expect the general pattern of the results would not be altered by including negative samples.}. See Fig. \ref{skipping_results} for our results.\par
+Because the model we are using has distinct input and output embeddings, we are able to evaluate their distinct contributions to learning about the new word. Specifically, we compared learning only the softmax weights and bias (output embedding), to learning only the input embedding, as well as to learning both, for one- and ten-shot learning\footnote{Note that these analyses were conducted before we incorporated the replay buffer, but we expect the general pattern of the results would not be altered by including replay.}. See Fig. \ref{skipping_results} for our results.\par
 We found that it was mostly the output embeddings that are improving. In one-shot learning, changing the input embedding alone causes almost no improvement, and changing both embeddings does not seem substantially different from changing just the output embedding. However, with ten training sentences the updated input embedding is producing some improvement, both alone and when trained together with the output embedding. Even in this case, however, the effect of the input embedding is still much smaller than the effect of the output embedding. That is, the model is mostly improving at predicting the new word in context, rather than predicting context based on the new word. \par 
 This is sensible for several reasons. First, whatever the new word conveys about the context will already be partly conveyed by the other words in the context. Second, our training approach was more unnatural than the situations in which a human might experience a new word, or even than the pretraining for the network, in that the sentences were presented without the context of surrounding sentences. This means that the model has less data to learn about how the new word predicts surrounding context, and less information about the context which predicts this word. This may also explain why full training with the word still produced better results in some cases than updating for it. Finally, efficiently passing information about the new word through the model from the input might require adjustments to the intermediate weights, which were frozen.\par
 \subsection{Digging deeper into model performance} \label{digging_deeper}
